--- a/src/main/webapp/client/src/index.html
+++ b/src/main/webapp/client/src/index.html
@@ -324,9 +324,9 @@
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search Your Book<span class="caret"></span></button>
         <ul class="dropdown-menu">
           <li><a href="#">Engineering</a></li>
-         <!--  <li role="separator" class="divider"></li> -->
+          <!-- <li role="separator" class="divider"></li> -->
           <li><a href="#">Medical</a></li>
-         <!--  <li role="separator" class="divider"></li> -->
+          <!-- <li role="separator" class="divider"></li> -->
           <li><a href="#">Management</a></li>
         </ul>
       </div><!-- /btn-group -->
@@ -336,50 +336,31 @@
     <!-- Search End -->		
 
 				<!--- this part will be hidden for mobile version -->
-				<div class="nav navbar-nav navbar-right hidden-xs">
-					<div class="dropdown  cartMenu ">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-shopping-cart"> </i> <span class="cartRespons"> Cart (Rs.210.00) </span> <b class="caret"> </b> </a>
+				<div class="nav navbar-nav navbar-right hidden-xs" ng-controller="cartController">
+					<div class="dropdown  cartMenu">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-shopping-cart"> </i> <span class="cartRespons"> Cart () </span> <b class="caret"> </b> </a>
 
 						<div class="dropdown-menu col-lg-4 col-xs-12 col-md-4 ">
 							<div class="w100 miniCartTable scroll-pane">
 								<table>
 									<tbody>
-										<tr class="miniCartProduct">
+										<tr class="miniCartProduct" ng-repeat="data in cartData.items">
 											<td style="width:20%" class="miniCartProductThumb">
 												<div>
-													<a href="product-details.html"> <img src="client/src/images/product/3.jpg" alt="img">
+													<a href="product-details.html"> <img ng-src="{{data.image}}" alt="img">
 													</a>
 												</div>
 											</td>
 											<td style="width:40%">
 												<div class="miniCartDescription">
-													<h4><a href="product-details.html"> TSHOP Tshirt DO9 </a></h4>
-													<span class="size"> 12 x 1.5 L </span>
+													<h4><a href="product-details.html">{{data.label}}</a></h4>
+													<span class="size"> </span>
 
-													<div class="price"><span> $22 </span></div>
+													<div class="price"><span>{{data.price}}</span></div>
 												</div>
 											</td>
 											<td style="width:10%" class="miniCartQuantity"><a> X 1 </a></td>
-											<td style="width:15%" class="miniCartSubtotal"><span> $33 </span></td>
-											<td style="width:5%" class="delete"><a> x </a></td>
-										</tr>
-										<tr class="miniCartProduct">
-											<td style="width:20%" class="miniCartProductThumb">
-												<div>
-													<a href="product-details.html"> <img src="client/src/images/product/2.jpg" alt="img">
-													</a>
-												</div>
-											</td>
-											<td style="width:40%">
-												<div class="miniCartDescription">
-													<h4><a href="product-details.html"> TShir TSHOP 09 </a></h4>
-													<span class="size"> 12 x 1.5 L </span>
-
-													<div class="price"><span> $15 </span></div>
-												</div>
-											</td>
-											<td style="width:10%" class="miniCartQuantity"><a> X 1 </a></td>
-											<td style="width:15%" class="miniCartSubtotal"><span> $120 </span></td>
+											<td style="width:15%" class="miniCartSubtotal"><span> {{data.price}} </span></td>
 											<td style="width:5%" class="delete"><a> x </a></td>
 										</tr>
 									</tbody>
@@ -389,7 +370,8 @@
 
 							<div class="miniCartFooter text-right">
 								<h3 class="text-right subtotal"> Subtotal: $210 </h3>
-								<a class="btn btn-sm btn-danger" href="cart.html"> <i class="fa fa-shopping-cart"> </i> VIEW CART </a><a class="btn btn-sm btn-primary"> CHECKOUT </a></div>
+								<a class="btn btn-sm btn-danger" href="cart.html"> <i class="fa fa-shopping-cart"> </i> VIEW CART </a><a class="btn btn-sm btn-primary"> CHECKOUT </a>
+							</div>
 							<!--/.miniCartFooter-->
 
 						</div>
@@ -656,6 +638,9 @@
 
 <!-- Registration -->
 <script src="client/src/app/widgets/registrationController.js"></script>
+
+<!-- Cart -->
+<script src="client/src/app/widgets/cartController.js"></script>
 
 <!-- Products -->
 <script src="client/src/app/product_details/product.module.js"></script>
