--- a/src/main/webapp/client/src/index.html
+++ b/src/main/webapp/client/src/index.html
@@ -184,9 +184,9 @@
 							<ul class="userMenu">
 								<li><a href="account-1.html"><span class="hidden-xs"> My Account</span> <i
                                     class="glyphicon glyphicon-user hide visible-xs "></i></a></li>
-								<li><a href="#" data-toggle="modal" data-target="#ModalLogin"><span class="hidden-xs">Sign In</span>
+								<li><a href="" data-toggle="modal" data-target="#ModalLogin"><span class="hidden-xs">Sign In</span>
                                 <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a></li>
-                            	<li class="hidden-xs"><a href="#" data-toggle="modal" data-target="#ModalSignup"> Create
+                            	<li class="hidden-xs"><a href="" data-toggle="modal" data-target="#ModalSignup"> Create
                                 Account </a></li>
 							</ul>
 						</div>
